Fix nav item vertical alignment

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
     height: 4rem;
     position: fixed;
     top: 0;
@@ -30,7 +30,7 @@ nav {
         /* width: 100%; */
         flex-basis: 200px;
         --border-width: 6px;
-        height: calc(100% - var(--border-width));
+        height: calc(100% - 2 * var(--border-width));
         /* line-height: 80px; */
         font-size: 1.4rem;
         text-decoration: none;
@@ -42,6 +42,7 @@ nav {
 
         &:hover {
             border-bottom: var(--border-width) solid white;
+            align-self: flex-end;
             /* height: 100%; */
             /* height: calc(100% - 20px); */
 
@@ -213,13 +214,10 @@ ul {
 
         & a {
             color: white;
-            /* width: 100%; */
+            width: 100%;
             flex-basis: 3rem;
-            /* line-height: 80px; */
             font-size: 1.4rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+
             &:hover {
                 border-bottom: none;
                 background-color: var(--blue);
